{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 297,
  "lineage": "5a077482-c0ac-66fb-bf10-d04fce83770a",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:616138583583:network-acl/acl-05ba3fd2916c07713",
            "default_network_acl_id": "acl-05ba3fd2916c07713",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-05ba3fd2916c07713",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "616138583583",
            "subnet_ids": [
              "subnet-02073c1f5da360ded",
              "subnet-071ca388e21e7be3a",
              "subnet-0cb970fb5210aafb3",
              "subnet-0d5b9d76143ebb121",
              "subnet-0db9d279371c16c1c",
              "subnet-0e3989fb2f5ad518a"
            ],
            "tags": {
              "Name": "lbriggs-default"
            },
            "tags_all": {
              "Name": "lbriggs-default"
            },
            "vpc_id": "vpc-02cb2dd312198aef2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:616138583583:security-group/sg-06b7f5f8ff1d1be3a",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-06b7f5f8ff1d1be3a",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "616138583583",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lbriggs-default"
            },
            "tags_all": {
              "Name": "lbriggs-default"
            },
            "vpc_id": "vpc-02cb2dd312198aef2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:616138583583:internet-gateway/igw-0edcb37053253d590",
            "id": "igw-0edcb37053253d590",
            "owner_id": "616138583583",
            "tags": {
              "Name": "lbriggs"
            },
            "tags_all": {
              "Name": "lbriggs"
            },
            "vpc_id": "vpc-02cb2dd312198aef2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:616138583583:route-table/rtb-05c14a48a6c804ea1",
            "id": "rtb-05c14a48a6c804ea1",
            "owner_id": "616138583583",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lbriggs-private-us-west-2a"
            },
            "tags_all": {
              "Name": "lbriggs-private-us-west-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cb2dd312198aef2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:616138583583:route-table/rtb-06b24f505506ea7ff",
            "id": "rtb-06b24f505506ea7ff",
            "owner_id": "616138583583",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lbriggs-private-us-west-2b"
            },
            "tags_all": {
              "Name": "lbriggs-private-us-west-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cb2dd312198aef2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:616138583583:route-table/rtb-053049295a6431a54",
            "id": "rtb-053049295a6431a54",
            "owner_id": "616138583583",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lbriggs-private-us-west-2c"
            },
            "tags_all": {
              "Name": "lbriggs-private-us-west-2c"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cb2dd312198aef2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:616138583583:route-table/rtb-01a7b8b558bcf6632",
            "id": "rtb-01a7b8b558bcf6632",
            "owner_id": "616138583583",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lbriggs-public"
            },
            "tags_all": {
              "Name": "lbriggs-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cb2dd312198aef2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:616138583583:subnet/subnet-02073c1f5da360ded",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02073c1f5da360ded",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616138583583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lbriggs-private-us-west-2a"
            },
            "tags_all": {
              "Name": "lbriggs-private-us-west-2a"
            },
            "vpc_id": "vpc-02cb2dd312198aef2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:616138583583:subnet/subnet-071ca388e21e7be3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071ca388e21e7be3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616138583583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lbriggs-private-us-west-2b"
            },
            "tags_all": {
              "Name": "lbriggs-private-us-west-2b"
            },
            "vpc_id": "vpc-02cb2dd312198aef2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:616138583583:subnet/subnet-0e3989fb2f5ad518a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3989fb2f5ad518a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616138583583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lbriggs-private-us-west-2c"
            },
            "tags_all": {
              "Name": "lbriggs-private-us-west-2c"
            },
            "vpc_id": "vpc-02cb2dd312198aef2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:616138583583:subnet/subnet-0db9d279371c16c1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db9d279371c16c1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616138583583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lbriggs-public-us-west-2a"
            },
            "tags_all": {
              "Name": "lbriggs-public-us-west-2a"
            },
            "vpc_id": "vpc-02cb2dd312198aef2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:616138583583:subnet/subnet-0d5b9d76143ebb121",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5b9d76143ebb121",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616138583583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lbriggs-public-us-west-2b"
            },
            "tags_all": {
              "Name": "lbriggs-public-us-west-2b"
            },
            "vpc_id": "vpc-02cb2dd312198aef2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:616138583583:subnet/subnet-0cb970fb5210aafb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb970fb5210aafb3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616138583583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lbriggs-public-us-west-2c"
            },
            "tags_all": {
              "Name": "lbriggs-public-us-west-2c"
            },
            "vpc_id": "vpc-02cb2dd312198aef2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:616138583583:vpc/vpc-02cb2dd312198aef2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05ba3fd2916c07713",
            "default_route_table_id": "rtb-09b3803f322fab8ee",
            "default_security_group_id": "sg-06b7f5f8ff1d1be3a",
            "dhcp_options_id": "dopt-1649d26e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02cb2dd312198aef2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09b3803f322fab8ee",
            "owner_id": "616138583583",
            "tags": {
              "Name": "lbriggs"
            },
            "tags_all": {
              "Name": "lbriggs"
            }
          }
        }
      ]
    }
  ]
}